<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search item -->
    <item
        android:id="@+id/menu_artist_list__item_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/artist_list__menu_item_search_title"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <!-- Sort item -->
    <item
        android:id="@+id/menu_artist_list__item_sort"
        android:title="@string/artist_list__menu_item_sort_title"
        android:icon="@drawable/ic_reorder_white"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/menu_artist_list__item_sort_none"
                android:title="@string/artist_list__menu_item_sort_none_title"
                app:showAsAction="ifRoom" />

            <item android:id="@+id/menu_artist_list__item_sort_name"
                android:title="@string/artist_list__menu_item_sort_name_title"
                app:showAsAction="ifRoom" />

            <item android:id="@+id/menu_artist_list__item_sort_track"
                android:title="@string/artist_list__menu_item_sort_track_title"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>